translation-tool/inputs/source_meta/objects/HSvc_ServiceProviderRule__c.object
<CustomObject>
    <fields>
        <fullName>Company_Id_Location_Id__c</fullName>
        <description>A formula field to populate Company ID or Location ID based on Account</description>
        <formula>IF(HSvc_AccountName__r.CBC_ID__c=&apos;&apos;, HSvc_AccountName__r.HNS_Location_ID__c, HSvc_AccountName__r.CBC_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Id/Location Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Provider Rules</relationshipLabel>
        <relationshipName>Service_Provider_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( HSvc_ExpiryDate__c  &lt;  TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Service Provider Rules</relationshipLabel>
        <relationshipName>Service_Provider_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseRecordType__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseSubtype__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Cancel Core Service (Retention)</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer Communication</fullName>
                </value>
                <value>
                    <fullName>Customer Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer follow-up</fullName>
                </value>
                <value>
                    <fullName>Discovery Error</fullName>
                </value>
                <value>
                    <fullName>DVR request</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment issue</fullName>
                </value>
                <value>
                    <fullName>Express Backup</fullName>
                </value>
                <value>
                    <fullName>Gateway Provisioning</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Install Issue</fullName>
                </value>
                <value>
                    <fullName>Internet Service</fullName>
                </value>
                <value>
                    <fullName>Key FOB provisioning</fullName>
                </value>
                <value>
                    <fullName>Leased equipment</fullName>
                </value>
                <value>
                    <fullName>myHughesNet Issue</fullName>
                </value>
                <value>
                    <fullName>NAP Truck Roll</fullName>
                </value>
                <value>
                    <fullName>NE Esc</fullName>
                </value>
                <value>
                    <fullName>New Circuit</fullName>
                </value>
                <value>
                    <fullName>New Site Monitoring</fullName>
                </value>
                <value>
                    <fullName>NMC Esc</fullName>
                </value>
                <value>
                    <fullName>Offers/Programs</fullName>
                </value>
                <value>
                    <fullName>Order Modification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseType__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced Warranty Replacement</fullName>
                </value>
                <value>
                    <fullName>Chronic</fullName>
                </value>
                <value>
                    <fullName>NE Action</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>PM Action</fullName>
                </value>
                <value>
                    <fullName>Pre-install</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>PSR</fullName>
                </value>
                <value>
                    <fullName>Repair Field</fullName>
                </value>
                <value>
                    <fullName>Repair Remote</fullName>
                </value>
                <value>
                    <fullName>Replacement with No Return</fullName>
                </value>
                <value>
                    <fullName>Retail Support</fullName>
                </value>
                <value>
                    <fullName>Return for Credit</fullName>
                </value>
                <value>
                    <fullName>Return of Lease</fullName>
                </value>
                <value>
                    <fullName>Return of Lease Collect</fullName>
                </value>
                <value>
                    <fullName>Service Changes</fullName>
                </value>
                <value>
                    <fullName>Service Provisioning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Technician Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Case_Type_Sub_Type__c</fullName>
        <formula>IF(TEXT( HSvc_CaseType__c  )&lt;&gt;&apos;&apos; &amp;&amp; TEXT( HSvc_CaseSubtype__c  )&lt;&gt;&apos;&apos;,TEXT( HSvc_CaseType__c  ) &amp; &apos; / &apos; &amp; TEXT( HSvc_CaseSubtype__c  ),IF(TEXT( HSvc_CaseType__c  )=&apos;&apos; &amp;&amp; TEXT( HSvc_CaseSubtype__c  )=&apos;&apos;,&apos;&apos;,IF(TEXT( HSvc_CaseType__c  )&lt;&gt;&apos;&apos;,TEXT( HSvc_CaseType__c  ),TEXT( HSvc_CaseSubtype__c  ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type &amp; Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSCompanyID__c</fullName>
        <label>Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSLocationId__c</fullName>
        <label>Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HNS Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Service Provider Rules</relationshipLabel>
        <relationshipName>Service_Provider_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ProductGrouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Grouping</label>
        <referenceTo>Product_Grouping__c</referenceTo>
        <relationshipLabel>Service Provider Rules</relationshipLabel>
        <relationshipName>Service_Provider_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_ServiceProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Provider Rules (Service Provider)</relationshipLabel>
        <relationshipName>Service_Provider_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Provider Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>HSvc_CaseRecordType__c</columns>
        <columns>NAME</columns>
        <columns>HSvc_ProductGrouping__c</columns>
        <columns>HSvc_Case_Type_Sub_Type__c</columns>
        <columns>HSvc_State__c</columns>
        <columns>HSvc_Country__c</columns>
        <columns>HSvc_PostalCode__c</columns>
        <columns>HSvc_Weight__c</columns>
        <columns>HSvc_ServiceProvider__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPR-{0000}</displayFormat>
        <label>Service Provider Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Provider Rules</pluralLabel>
    <recordTypes>
        <fullName>InstallWorkOrder</fullName>
        <active>true</active>
        <label>Install Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>RepairWorkOrder</fullName>
        <active>true</active>
        <label>Repair Work Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HSvc_ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <errorConditionFormula>OR(HSvc_ExpiryDate__c &lt; TODAY(),HSvc_ExpiryDate__c &lt; HSvc_EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>HSvc_ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>